diesel_compile_tests/tests/fail/combinations_require_same_sql_types.stderr
error[E0271]: type mismatch resolving `<table as AsQuery>::SqlType == (Integer, Text)`
  --> tests/fail/combinations_require_same_sql_types.rs:30:32
   |
30 |     let _ = users::table.union(comments::table);
   |                          ----- ^^^^^^^^^^^^^^^ expected `(Integer, Text)`, found `(Integer, Integer)`
   |                          |
   |                          required by a bound introduced by this call
   |
   = note: expected tuple `(diesel::sql_types::Integer, diesel::sql_types::Text)`
              found tuple `(diesel::sql_types::Integer, diesel::sql_types::Integer)`
note: required by a bound in `union`
  --> $DIESEL/src/query_dsl/combine_dsl.rs
   |
   |     fn union<Rhs>(self, rhs: Rhs) -> dsl::Union<Self, Rhs>
   |        ----- required by a bound in this associated function
   |     where
   |         Rhs: AsQuery<SqlType = <Self::Query as Query>::SqlType>;
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `CombineDsl::union`

error[E0271]: type mismatch resolving `<table as AsQuery>::SqlType == (Integer, Text)`
  --> tests/fail/combinations_require_same_sql_types.rs:35:25
   |
35 |     let _ = union.union(comments::table);
   |                   ----- ^^^^^^^^^^^^^^^ expected `(Integer, Text)`, found `(Integer, Integer)`
   |                   |
   |                   required by a bound introduced by this call
   |
   = note: expected tuple `(diesel::sql_types::Integer, diesel::sql_types::Text)`
              found tuple `(diesel::sql_types::Integer, diesel::sql_types::Integer)`
note: required by a bound in `union`
  --> $DIESEL/src/query_dsl/combine_dsl.rs
   |
   |     fn union<Rhs>(self, rhs: Rhs) -> dsl::Union<Self, Rhs>
   |        ----- required by a bound in this associated function
   |     where
   |         Rhs: AsQuery<SqlType = <Self::Query as Query>::SqlType>;
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `CombineDsl::union`
